Joins and Relationships

--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,12 +284,12 @@
     "    \"(1, 'Michelle Gonzalez', 'michellegonzalez@example.net', '2021-01-28')\",\n",
     "    \"(2, 'Lauren Butler', 'laurenbutler@example.org', '2021-07-07')\",\n",
     "    \"(3, 'Daniel Hunt', 'danielhunt@example.com', '2021-11-09')\",\n",
-    "    \"(4, 'James\tClark', 'jamesclark@example.org', '2019-05-11')\",\n",
-    "    \"(5, 'Stephanie\tMonroe', 'stephaniemonroe@example.net', '2021-05-24')\",\n",
+    "    \"(4, 'James Clark', 'jamesclark@example.org', '2019-05-11')\",\n",
+    "    \"(5, 'Stephanie Monroe', 'stephaniemonroe@example.net', '2021-05-24')\",\n",
     "    \"(6, 'Cynthia Shelton', 'cynthiashelton@example.org', '2022-06-09')\",\n",
     "    \"(7, 'Anthony Wong', 'anthonywong@example.org', '2019-08-31')\",\n",
-    "    \"(8, 'Fred\tHopkins', 'fredhopkins@example.org', '2021-10-06')\",\n",
-    "    \"(9, 'Glenn\tVasquez', 'glennvasquez@example.com', '2021-02-12')\",\n",
+    "    \"(8, 'Fred Hopkins', 'fredhopkins@example.org', '2021-10-06')\",\n",
+    "    \"(9, 'Glenn Vasquez', 'glennvasquez@example.com', '2021-02-12')\",\n",
     "    \"(10, 'Scott Weaver', 'scottweaver@example.net', '2019-11-23')\",\n",
     "]"
    ]
@@ -610,6 +610,50 @@
    "metadata": {},
    "source": [
     "2.1. List all products along with the names of the customers who ordered them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, \"Carole Hochman Women's Long Zip Robe\", 'Sleep & Lounge', Decimal('79.00'), 'Michelle Gonzalez')\n",
+      "(9, \"Larry Levine Women's Maxi Length Hooded Down Jacket\", 'Outerwear & Coats', Decimal('118.75'), 'Michelle Gonzalez')\n",
+      "(15, 'KEEN Concord Stripe Crew Lite Sock', 'Socks & Hosiery', Decimal('17.00'), 'Lauren Butler')\n",
+      "(11, \"Michael Kors Men's Waffle Stitch Full Zip With Mock Neck\", 'Sweaters', Decimal('185.86'), 'Daniel Hunt')\n",
+      "(12, \"HUGO BOSS Men's Contrasting Stripe Crew Sock\", 'Socks', Decimal('13.00'), 'Daniel Hunt')\n",
+      "(1, \"C-IN2 Men's Pop Color Street Jock\", 'Active', Decimal('17.00'), 'James Clark')\n",
+      "(5, 'Aimee Gowns Original Bra-less Nursing Gown', 'Sleep & Lounge', Decimal('39.96'), 'Stephanie Monroe')\n",
+      "(16, \"Bobi Women's Modal Jersey Cowl Neck Dress\", 'Dresses', Decimal('60.00'), 'Stephanie Monroe')\n",
+      "(14, 'Allegra K Ladies Elastic Waist Sleeveless Side Pocket Tunic Jumpsuit Light Green XS', 'Jumpsuits & Rompers', Decimal('10.21'), 'Stephanie Monroe')\n",
+      "(7, \"Mod-O-Doc Women's Big Cord Peacoat\", 'Outerwear & Coats', Decimal('170.00'), 'Cynthia Shelton')\n",
+      "(8, \"True Religion Men's Geno Baja Slim Jean\", 'Jeans', Decimal('264.00'), 'Anthony Wong')\n",
+      "(10, \"HUGO BOSS Men's Woven Long Elastic Pant\", 'Sleep & Lounge', Decimal('34.30'), 'Anthony Wong')\n",
+      "(3, 'Harbor Bay Big & Tall 2-Pack Plaid Woven Boxers', 'Underwear', Decimal('23.00'), 'Anthony Wong')\n",
+      "(17, \"Oakley Men's Flak Jacket XLJ Golf Sunglasses\", 'Accessories', Decimal('150.00'), 'Glenn Vasquez')\n",
+      "(6, 'Premium White Above Ankle Toe Socks', 'Socks', Decimal('7.50'), 'Glenn Vasquez')\n",
+      "(13, \"Duofold Men's Big-Tall Heavy Weight Plus Crew Thermal Top\", 'Active', Decimal('33.98'), 'Glenn Vasquez')\n",
+      "(4, 'Ralph Lauren Mens SB 2B Solid Navy Blue Wool Suit', 'Suits & Sport Coats', Decimal('319.99'), 'Scott Weaver')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"SELECT Products.*, OrderDetailsCustomers.Name AS Customer_Name \n",
+    "               FROM Products\n",
+    "               RIGHT JOIN\n",
+    "               (SELECT OrderDetails.ProductID, OrdersCustomers.Name FROM OrderDetails\n",
+    "               RIGHT JOIN\n",
+    "               (SELECT Orders.OrderID, Customers.Name FROM Orders \n",
+    "               INNER JOIN Customers ON Orders.CustomerID=Customers.CustomerID) AS OrdersCustomers\n",
+    "               ON OrderDetails.OrderID=OrdersCustomers.OrderID) AS OrderDetailsCustomers\n",
+    "               ON Products.ProductID=OrderDetailsCustomers.ProductID;\"\"\")\n",
+    "data = cursor.fetchall()\n",
+    "for row in data:\n",
+    "    print(row)"
    ]
   },
   {
