--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,7 @@
       "('ecom',)\n",
       "('information_schema',)\n",
       "('mysql',)\n",
+      "('org',)\n",
       "('performance_schema',)\n",
       "('python_db',)\n",
       "('sys',)\n"
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,12 +159,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create tables"
+    "## Create tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -253,18 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cursor.execute(\"DROP TABLE Customers;\")"
+    "cursor.execute(\"DROP TABLE Customers;\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Insert data into tables"
+    "## Insert data into tables"
    ]
   },
   {
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,22 +452,344 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Information Schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>column_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <td>varchar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Email</th>\n",
+       "      <td>varchar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JoinDate</th>\n",
+       "      <td>date</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            data_type\n",
+       "column_name          \n",
+       "CustomerID        int\n",
+       "Name          varchar\n",
+       "Email         varchar\n",
+       "JoinDate         date"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT column_name, data_type \n",
+    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
+    "    WHERE table_schema='org'\n",
+    "        AND table_name='Customers';\n",
+    "\"\"\")\n",
+    "data = cursor.fetchall()\n",
+    "df=pd.DataFrame(data=data, columns=[\"column_name\", \"data_type\"])\n",
+    "df.set_index(\"column_name\")\n",
+    "# for row in data:\n",
+    "#     print(row)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>column_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ProductID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <td>varchar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Category</th>\n",
+       "      <td>varchar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <td>decimal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            data_type\n",
+       "column_name          \n",
+       "ProductID         int\n",
+       "Name          varchar\n",
+       "Category      varchar\n",
+       "Price         decimal"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor.execute(\"SELECT * FROM OrderDetails\")\n",
+    "cursor.execute(\"\"\"\n",
+    "SELECT column_name, data_type \n",
+    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
+    "    WHERE table_schema='org'\n",
+    "        AND table_name='Products';\n",
+    "\"\"\")\n",
     "data = cursor.fetchall()\n",
-    "for row in data:\n",
-    "    print(row)"
+    "df=pd.DataFrame(data=data, columns=[\"column_name\", \"data_type\"])\n",
+    "df.set_index(\"column_name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>column_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OrderID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OrderDate</th>\n",
+       "      <td>date</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TotalAmount</th>\n",
+       "      <td>decimal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            data_type\n",
+       "column_name          \n",
+       "OrderID           int\n",
+       "CustomerID        int\n",
+       "OrderDate        date\n",
+       "TotalAmount   decimal"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT column_name, data_type \n",
+    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
+    "    WHERE table_schema='org'\n",
+    "        AND table_name='Orders';\n",
+    "\"\"\")\n",
+    "data = cursor.fetchall()\n",
+    "df=pd.DataFrame(data=data, columns=[\"column_name\", \"data_type\"])\n",
+    "df.set_index(\"column_name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data_type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>column_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OrderDetailID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OrderID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ProductID</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quantity</th>\n",
+       "      <td>int</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PricePerUnit</th>\n",
+       "      <td>decimal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              data_type\n",
+       "column_name            \n",
+       "OrderDetailID       int\n",
+       "OrderID             int\n",
+       "ProductID           int\n",
+       "Quantity            int\n",
+       "PricePerUnit    decimal"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT column_name, data_type \n",
+    "    FROM INFORMATION_SCHEMA.COLUMNS\n",
+    "    WHERE table_schema='org'\n",
+    "        AND table_name='OrderDetails';\n",
+    "\"\"\")\n",
+    "data = cursor.fetchall()\n",
+    "df=pd.DataFrame(data=data, columns=[\"column_name\", \"data_type\"])\n",
+    "df.set_index(\"column_name\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Queries"
+    "## Queries"
    ]
   },
   {
@@ -485,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +923,7 @@
        "10               Scott Weaver       scottweaver@example.net  2019-11-23"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
