Joins and Relationships

--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -796,14 +796,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basics"
+    "### Basics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1. List all customers. "
+    "#### 1.1. List all customers. "
    ]
   },
   {
@@ -939,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2. Show all products in the 'Active' category"
+    "#### 1.2. Show all products in the 'Active' category"
    ]
   },
   {
@@ -1019,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.3. Find the total number of orders placed."
+    "#### 1.3. Find the total number of orders placed."
    ]
   },
   {
@@ -1046,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.4. Display the details of the most recent order."
+    "#### 1.4. Display the details of the most recent order."
    ]
   },
   {
@@ -1126,14 +1126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Joins and Relationships"
+    "### Joins and Relationships"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.1. List all products along with the names of the customers who ordered them."
+    "#### 2.1. List all products along with the names of the customers who ordered them."
    ]
   },
   {
@@ -1366,7 +1366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2. Show orders that include more than one product."
+    "#### 2.2. Show orders that include more than one product."
    ]
   },
   {
@@ -1482,34 +1482,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3. Find the total sales amount for each customer."
+    "#### 2.3. Find the total sales amount for each customer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>JoinDate</th>\n",
+       "      <th>Number of Products</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michelle Gonzalez</td>\n",
+       "      <td>michellegonzalez@example.net</td>\n",
+       "      <td>2021-01-28</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lauren Butler</td>\n",
+       "      <td>laurenbutler@example.org</td>\n",
+       "      <td>2021-07-07</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Daniel Hunt</td>\n",
+       "      <td>danielhunt@example.com</td>\n",
+       "      <td>2021-11-09</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>James Clark</td>\n",
+       "      <td>jamesclark@example.org</td>\n",
+       "      <td>2019-05-11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Stephanie Monroe</td>\n",
+       "      <td>stephaniemonroe@example.net</td>\n",
+       "      <td>2021-05-24</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cynthia Shelton</td>\n",
+       "      <td>cynthiashelton@example.org</td>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Anthony Wong</td>\n",
+       "      <td>anthonywong@example.org</td>\n",
+       "      <td>2019-08-31</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Anthony Wong</td>\n",
+       "      <td>anthonywong@example.org</td>\n",
+       "      <td>2019-08-31</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Glenn Vasquez</td>\n",
+       "      <td>glennvasquez@example.com</td>\n",
+       "      <td>2021-02-12</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Scott Weaver</td>\n",
+       "      <td>scottweaver@example.net</td>\n",
+       "      <td>2019-11-23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Name                         Email    JoinDate  \\\n",
+       "CustomerID                                                                \n",
+       "1           Michelle Gonzalez  michellegonzalez@example.net  2021-01-28   \n",
+       "2               Lauren Butler      laurenbutler@example.org  2021-07-07   \n",
+       "3                 Daniel Hunt        danielhunt@example.com  2021-11-09   \n",
+       "4                 James Clark        jamesclark@example.org  2019-05-11   \n",
+       "5            Stephanie Monroe   stephaniemonroe@example.net  2021-05-24   \n",
+       "6             Cynthia Shelton    cynthiashelton@example.org  2022-06-09   \n",
+       "7                Anthony Wong       anthonywong@example.org  2019-08-31   \n",
+       "7                Anthony Wong       anthonywong@example.org  2019-08-31   \n",
+       "9               Glenn Vasquez      glennvasquez@example.com  2021-02-12   \n",
+       "10               Scott Weaver       scottweaver@example.net  2019-11-23   \n",
+       "\n",
+       "           Number of Products  \n",
+       "CustomerID                     \n",
+       "1                           2  \n",
+       "2                           1  \n",
+       "3                           2  \n",
+       "4                           1  \n",
+       "5                           3  \n",
+       "6                           1  \n",
+       "7                           1  \n",
+       "7                           2  \n",
+       "9                           3  \n",
+       "10                          1  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.execute(\"\"\"\n",
-    "SELECT Orders.*, OrdersQuantity.Quantity FROM Orders\n",
+    "SELECT Customers.*, OrdersOrdersQuantity.Quantity FROM Customers\n",
     "INNER JOIN\n",
-    "(SELECT OrderID, SUM(Quantity) AS Quantity\n",
-    "    FROM OrderDetails\n",
-    "    GROUP BY OrderID) AS OrdersQuantity\n",
-    "ON Orders.OrderID=OrdersQuantity.OrderID\n",
-    "WHERE OrdersQuantity.Quantity>1;\n",
+    "    (SELECT Orders.CustomerID, OrdersQuantity.Quantity \n",
+    "        FROM Orders INNER JOIN\n",
+    "        (SELECT OrderID, SUM(Quantity) AS Quantity\n",
+    "            FROM OrderDetails\n",
+    "            GROUP BY OrderID) AS OrdersQuantity\n",
+    "        ON Orders.OrderID=OrdersQuantity.OrderID) AS OrdersOrdersQuantity\n",
+    "ON Customers.CustomerID=OrdersOrdersQuantity.CustomerID;\n",
     "\"\"\")\n",
     "data = cursor.fetchall()\n",
-    "df = pd.DataFrame(data=data, columns=[\"OrderID\", \"CustomerID\", \"OrderDate\", \"TotalAmount\", \"Number of Products\"])\n",
-    "df.set_index(\"OrderID\")cursor.execute(\"\"\"\n"
+    "df = pd.DataFrame(data=data, columns=[\"CustomerID\", \"Name\", \"Email\", \"JoinDate\",  \"Number of Products\"])\n",
+    "df.set_index(\"CustomerID\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Aggregation and Grouping"
+    "### Aggregation and Grouping"
    ]
   },
   {
@@ -1537,7 +1681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Subqueries and Nested Queries"
+    "### Subqueries and Nested Queries"
    ]
   },
   {
@@ -1565,7 +1709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Date and Time Functions"
+    "### Date and Time Functions"
    ]
   },
   {
@@ -1586,7 +1730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Advanced Queries"
+    "### Advanced Queries"
    ]
   },
   {
@@ -1614,7 +1758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Manipulation and Updates"
+    "### Data Manipulation and Updates"
    ]
   },
   {
@@ -1629,26 +1773,6 @@
    "metadata": {},
    "source": [
     "7.2. Update the price of a specific product."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# copy to csv-file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rows = cursor.fetchall()\n",
-    "fp = open('./test.csv', 'w') ##different path but you get the idea\n",
-    "myFile = csv.writer(fp, lineterminator='\\n')\n",
-    "myFile.writerows(data)\n",
-    "fp.close()"
    ]
   }
  ],
