Date and Time Functions

--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -1963,10 +1963,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         CustomerID   OrderDate TotalAmount  month\n",
+      "OrderID                                           \n",
+      "6                10  2024-04-04      319.98      4\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT OrderID, CustomerID, OrderDate, TotalAmount, MONTH(OrderDate) AS month FROM Orders\n",
+    "WHERE MONTH(OrderDate) = (SELECT Month(MAX(OrderDate)) FROM Orders);\n",
+    "\"\"\")\n",
+    "data=cursor.fetchall()\n",
+    "print(pd.DataFrame(data=data, columns=[\"OrderID\", \"CustomerID\", \"OrderDate\", \"TotalAmount\", \"month\"]).set_index(\"OrderID\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   OrderID  CustomerID   OrderDate TotalAmount\n",
+      "0        1           5  2021-07-23      110.16\n",
+      "1        2           9  2024-02-18      191.48\n",
+      "2        3           7  2020-07-30      264.00\n",
+      "3        4           2  2023-03-27       17.00\n",
+      "4        5           4  2022-11-12       17.00\n",
+      "5        6          10  2024-04-04      319.98\n",
+      "6        7           3  2022-07-19      198.85\n",
+      "7        8           6  2023-11-04      170.00\n",
+      "8        9           7  2023-12-17       57.29\n",
+      "9       10           1  2022-03-06      197.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Orders\")\n",
+    "data = cursor.fetchall()\n",
+    "print(pd.DataFrame(data=data, columns=[\"OrderID\", \"CustomerID\", \"OrderDate\", \"TotalAmount\"]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1977,10 +2023,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Name                  Emails    JoinDate\n",
+      "CustomerID                                                 \n",
+      "4           James Clark  jamesclark@example.org  2019-05-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT * FROM Customers\n",
+    "WHERE JoinDate=(\n",
+    "  SELECT MIN(JoinDate) FROM Customers             \n",
+    ");\n",
+    "\"\"\")\n",
+    "print(pd.DataFrame(data=cursor.fetchall(), columns=[\"CustomerID\", \"Name\", \"Emails\", \"JoinDate\"]).set_index(\"CustomerID\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         Name                        Emails    JoinDate\n",
+      "CustomerID                                                             \n",
+      "4                 James Clark        jamesclark@example.org  2019-05-11\n",
+      "7                Anthony Wong       anthonywong@example.org  2019-08-31\n",
+      "10               Scott Weaver       scottweaver@example.net  2019-11-23\n",
+      "1           Michelle Gonzalez  michellegonzalez@example.net  2021-01-28\n",
+      "9               Glenn Vasquez      glennvasquez@example.com  2021-02-12\n",
+      "5            Stephanie Monroe   stephaniemonroe@example.net  2021-05-24\n",
+      "2               Lauren Butler      laurenbutler@example.org  2021-07-07\n",
+      "8                Fred Hopkins       fredhopkins@example.org  2021-10-06\n",
+      "3                 Daniel Hunt        danielhunt@example.com  2021-11-09\n",
+      "6             Cynthia Shelton    cynthiashelton@example.org  2022-06-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"SELECT * FROM Customers ORDER BY JoinDate ASC;\"\"\")\n",
+    "print(pd.DataFrame(data=cursor.fetchall(), columns=[\"CustomerID\", \"Name\", \"Emails\", \"JoinDate\"]).set_index(\"CustomerID\"))"
+   ]
   },
   {
    "cell_type": "markdown",
